[gd_scene load_steps=16 format=3 uid="uid://cp3mgj3s0d6r8"]

[ext_resource type="Script" path="res://Enemies/LaserShotgunTurret.gd" id="1_ghsm1"]
[ext_resource type="PackedScene" uid="uid://cpihldu12wvhc" path="res://Enemies/DeathDelay.tscn" id="2_pb1a6"]
[ext_resource type="PackedScene" uid="uid://0wu02j7iqkpw" path="res://Enemies/AggroCast.tscn" id="2_qgib2"]
[ext_resource type="Shader" path="res://HitFlash.gdshader" id="3_mjrua"]
[ext_resource type="Texture2D" uid="uid://dipyv4tbujgmr" path="res://Assets/shotgun_turret_base.png" id="4_a5d04"]
[ext_resource type="Texture2D" uid="uid://cs6rgi45oqjmo" path="res://Assets/laser_shotgun_gun.png" id="5_ak8wf"]
[ext_resource type="PackedScene" uid="uid://bpktjxlghct6o" path="res://Projectile/ProjectileManager.tscn" id="6_qs1p6"]
[ext_resource type="Resource" uid="uid://bkvin8f8pc0ms" path="res://Projectile/Guns/LaserShotgun.tres" id="8_exchb"]
[ext_resource type="PackedScene" path="res://Utility/Shootable.tscn" id="8_j1d8t"]
[ext_resource type="PackedScene" path="res://Utility/Meleeable.tscn" id="9_4gd2k"]
[ext_resource type="PackedScene" path="res://Utility/HitFlashHandler.tscn" id="10_dart4"]
[ext_resource type="PackedScene" uid="uid://dtn83xn0u1hpe" path="res://GUI/UncalibrationUI.tscn" id="13_ohyjq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mp070"]
size = Vector2(256, 256)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ufj5l"]
resource_local_to_scene = true
shader = ExtResource("3_mjrua")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7qrrg"]
resource_local_to_scene = true
shader = ExtResource("3_mjrua")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[node name="LaserShotgunTurret" type="StaticBody2D"]
script = ExtResource("1_ghsm1")
MachineTitle = "M5-PHONEIX"

[node name="AggroCast" parent="." instance=ExtResource("2_qgib2")]
CastMagnitude = 3600.0
TickCap = 120
IntervalRange = Vector2i(6, 14)

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mp070")

[node name="Destruction" parent="." instance=ExtResource("2_pb1a6")]
Delay = 3.0

[node name="Firerate" type="Timer" parent="."]

[node name="FullBody" type="Node2D" parent="."]

[node name="Base" type="Sprite2D" parent="FullBody"]
material = SubResource("ShaderMaterial_ufj5l")
texture = ExtResource("4_a5d04")

[node name="Cannon" type="Sprite2D" parent="FullBody"]
material = SubResource("ShaderMaterial_7qrrg")
texture = ExtResource("5_ak8wf")

[node name="Muzzle" type="Marker2D" parent="FullBody/Cannon"]
position = Vector2(120, 0)

[node name="LaserShotgun" parent="." instance=ExtResource("6_qs1p6")]
GunInfo = ExtResource("8_exchb")

[node name="Shootable" parent="." node_paths=PackedStringArray("Collider") instance=ExtResource("8_j1d8t")]
CollisionType = 2
Collider = NodePath("..")

[node name="Meleeable" parent="." node_paths=PackedStringArray("Collider") instance=ExtResource("9_4gd2k")]
Collider = NodePath("..")

[node name="HitFlashHandler" parent="." instance=ExtResource("10_dart4")]
Duration = 0.25

[node name="UncalibrationUI" parent="." node_paths=PackedStringArray("Body") instance=ExtResource("13_ohyjq")]
BoxSize = 512
Body = NodePath("..")
